<resources>
    <string name="app_name">Find My Doctor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pref_file">pref_file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_action_string">Search</string>
    <string name="favourites_action_string">Favourites</string>
    <string name="more_action_string">More</string>
    <string name="search_title">Search</string>
    <string name="search_specialists">Search by specialistOld</string>
    <string name="search_hint">Search by doctor name</string>
    <string name="call_now_str">Call Now</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose_city">City:    </string>
    <string name="logout">Logout (%1$s)</string>
    <string name="language">Language:</string>
    <string name="login">Login</string>
    <string name="login_first">(You must login first)</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="fees">Fees:</string>
    <string name="address">Address:</string>
    <string name="days">Days:</string>
    <string name="from">From:</string>
    <string name="amany_sabry">Dr.Amany Sabry</string>
    <string name="specialist_name">Pediatrics and New Born</string>
    <string name="patients_reviews">Patients\' Reviews</string>
    <string name="about_the_doctor">About the doctor:</string>
    <string name="about_doctor_example">Pediatrics and New Born Pediatrics and New Born Pediatrics and New Born Pediatrics and New Born Pediatrics and New Born Pediatrics and New Born Pediatrics and New Born</string>
    <string name="clinic_services">Clinic Services:</string>
    <string name="services_example">Service1, Service2, Service3</string>
    <string name="save_button">Save</string>
    <string name="most_common_specialists">Most Common Specialists</string>
    <string name="favourites">My Favourites Doctors</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="create_account_with_email">Create Account with Email</string>
    <string name="already_a_member">Already A Member?</string>
    <string name="skip">Skip</string>
    <string name="clinic_phones">Clinic Phones</string>
    <string name="info">Info</string>
    <string name="search_results_str">Search results for %1$s</string>
    <string name="add_to_fav">Added to favourites</string>
    <string name="remove_from_fav">Removed from favourites</string>
    <string name="authentication_failed">Authentication Failed, Please try again!</string>
    <string name="password_length">Password is too short, enter minimum 6 characters</string>
    <string name="enter_mail_password">Please enter your email and password!</string>
    <string name="login_failed">Login failed, wrong username or password!</string>
    <string name="enter_all_fields">Please enter all fields!</string>
    <string name="create_user">User is created successfully!</string>
    <string name="create_user_failed">Failed to create new user, Please try again!</string>
    <string name="update_user">Data updated successfully</string>
    <string name="update_user_failed">Failed to update data, please try again!</string>
    <string name="add_review">Add review</string>
    <string name="write_review">Please write your review!</string>
    <string name="reviewer">Your name</string>
    <string name="review_content">Write your review here</string>
    <string name="add">Add</string>
    <string name="success_adding_review">Review is add successfully</string>
    <string name="failed_adding_review">Something went wrong, Please try again!</string>
    <string name="not_valid_mail">Email is not valid, Please check it!</string>


    <string-array name="specialists_suggestions">
        <item>Specialist 1</item>
        <item>Specialist 2</item>
        <item>Specialist 3</item>
        <item>Specialist 4</item>
        <item>Specialist 5</item>
    </string-array>

    <string-array name="doctors_suggestions">
        <item>Doctor 1</item>
        <item>Doctor 2</item>
        <item>Doctor 3</item>
        <item>Doctor 4</item>
        <item>Doctor 5</item>
    </string-array>

    <string-array name="city_list">
        <item>All Cities</item>
        <item>Sirs El-Layan</item>
        <item>Menouf</item>
    </string-array>

    <string-array name="language_list">
        <item>Arabic</item>
        <item>English</item>
    </string-array>

    <string-array name="specialists">
        <item>Dermatology</item>
        <item>Dentistry</item>
        <item>Psychiatry</item>
        <item>Pediatrics and New Born</item>
        <item>Neurology</item>
        <item>Orthopedics</item>
        <item>Gynaecology and Infertility</item>
        <item>Ear, Nose and Throat</item>
        <item>Cardiology and Vascular Disease</item>
        <item>Allergy and Immunology</item>
    </string-array>

    <integer-array name="specialists_icons">
        <item>@drawable/ic_dermatology</item>
        <item>@drawable/ic_dentistry</item>
        <item>@drawable/ic_psychiatry</item>
        <item>@drawable/ic_newborn</item>
        <item>@drawable/ic_neurology</item>
        <item>@drawable/ic_orthopedics</item>
        <item>@drawable/ic_gynaecology</item>
        <item>@drawable/ic_earnose</item>
        <item>@drawable/ic_cardiology</item>
        <item>@drawable/ic_allergy</item>
    </integer-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>
