<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.StartScreen">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:background="@null"
        android:text="@string/skip"
        android:textColor="@color/primaryColor"
        android:onClick="skipLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/app_name"
        android:textColor="@color/primaryColor"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signin_with_google"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ripple_effect"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_google_icon"
        android:padding="8dp"
        android:text="@string/continue_with_google"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:id="@+id/signin_with_facebook"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ripple_effect"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_facebook_icon"
        android:padding="8dp"
        android:text="@string/continue_with_facebook"
        android:textColor="@android:color/darker_gray" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp">

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/primaryColor" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_bg"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/white" />
    </FrameLayout>

    <Button
        android:id="@+id/signup_with_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ripple_effect"
        android:drawablePadding="16dp"
        android:padding="8dp"
        android:text="@string/create_account_with_email"
        android:textColor="@android:color/darker_gray"
        android:onClick="openSignupActivity"
        android:drawableStart="@drawable/ic_email_32dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_member"
            android:textColor="@color/primaryColor" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:background="@null"
            android:onClick="openSignInActivity"
            android:text="@string/sign_in"
            android:textColor="@color/primaryColor"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>