<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarheight"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doctor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amany_sabry"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/doctor_specialist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/specialist_name"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="@color/yellow"
                    android:stepSize="1" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <com.hanan.and.udacity.meetyourdoctor.utilities.FloatingActionImageView
        android:id="@+id/doctor_profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        android:src="@drawable/doctor_male_profile"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|center" />

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="8dp"-->
        <!--android:src="@drawable/ic_search"-->
        <!--app:fabSize="normal"-->
        <!--app:backgroundTint="@color/secondaryLightColor"/>-->

    <include layout="@layout/doctor_profile_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/services_layout"
        android:background="@color/primaryColor"
        android:text="@string/patients_reviews"
        android:textColor="@color/white"
        android:layout_gravity="bottom|end"
        android:fitsSystemWindows="true"
        android:onClick="openPatientsReviewsActivity"/>

    <!--<RatingBar-->
        <!--android:id="@+id/rating"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:numStars="5"-->
        <!--android:stepSize="1"-->
        <!--android:isIndicator="true"-->
        <!--android:progressTint="@color/yellow"-->
        <!--android:layout_gravity="bottom"-->
        <!--style="?android:attr/ratingBarStyleSmall"-->
        <!--app:layout_anchor="@id/appbar"-->
        <!--app:layout_anchorGravity="bottom"-->
        <!--android:layout_margin="8dp"/>-->

</android.support.design.widget.CoordinatorLayout>